tests/fail/rebind_immutable_smart.tk
import std/io::println

shape Node(
    nul ~next: Node,
    val: i32
)

fn main() -> i32 {
    auto ~head = new Node(next = unset, val = 1)
    
    // ERROR: Missing '#' for rebind
    // EXPECT: error[E0443]:
    ~head = new Node(next = unset, val = 2) // CHECK: error: Cannot assign to immutable entity
    
    return 0
}
