tests/fail/rebind_immutable_smart.stderr
tests/fail/rebind_immutable_smart.tk:13:11: error[E0406]: Cannot assign to immutable entity. Missing writable token '#' or '!'.
tests/fail/rebind_immutable_smart.tk:13:5: error[E0443]: Cannot modify immutable entity '~Node'
